docs/envoy/v1.33.9/_sources/intro/arch_overview/security/secpos_requires_trusted_downstream_and_upstream.rst.txt
Extension security: ``requires_trusted_downstream_and_upstream``
================================================================

* :ref:`envoy.bootstrap.vcl <extension_envoy.bootstrap.vcl>` (alpha) (:ref:`contrib builds <install_contrib>` only)
* :ref:`envoy.clusters.aggregate <extension_envoy.clusters.aggregate>`
* :ref:`envoy.clusters.redis <extension_envoy.clusters.redis>`
* :ref:`envoy.compression.zstd.decompressor <extension_envoy.compression.zstd.decompressor>`
* :ref:`envoy.filters.generic.router <extension_envoy.filters.generic.router>` (alpha)
* :ref:`envoy.filters.http.aws_lambda <extension_envoy.filters.http.aws_lambda>` (alpha)
* :ref:`envoy.filters.http.aws_request_signing <extension_envoy.filters.http.aws_request_signing>` (alpha)
* :ref:`envoy.filters.http.checksum <extension_envoy.filters.http.checksum>` (alpha) (:ref:`contrib builds <install_contrib>` only)
* :ref:`envoy.filters.http.dynamo <extension_envoy.filters.http.dynamo>` (:ref:`contrib builds <install_contrib>` only)
* :ref:`envoy.filters.http.golang <extension_envoy.filters.http.golang>` (alpha) (:ref:`contrib builds <install_contrib>` only)
* :ref:`envoy.filters.http.language <extension_envoy.filters.http.language>` (alpha) (:ref:`contrib builds <install_contrib>` only)
* :ref:`envoy.filters.http.squash <extension_envoy.filters.http.squash>` (:ref:`contrib builds <install_contrib>` only)
* :ref:`envoy.filters.http.tap <extension_envoy.filters.http.tap>` (alpha)
* :ref:`envoy.filters.listener.http_inspector <extension_envoy.filters.listener.http_inspector>`
* :ref:`envoy.filters.network.dubbo_proxy <extension_envoy.filters.network.dubbo_proxy>` (alpha)
* :ref:`envoy.filters.network.generic_proxy <extension_envoy.filters.network.generic_proxy>` (alpha)
* :ref:`envoy.filters.network.golang <extension_envoy.filters.network.golang>` (alpha) (:ref:`contrib builds <install_contrib>` only)
* :ref:`envoy.filters.network.mongo_proxy <extension_envoy.filters.network.mongo_proxy>`
* :ref:`envoy.filters.network.mysql_proxy <extension_envoy.filters.network.mysql_proxy>` (alpha) (:ref:`contrib builds <install_contrib>` only)
* :ref:`envoy.filters.network.postgres_proxy <extension_envoy.filters.network.postgres_proxy>` (:ref:`contrib builds <install_contrib>` only)
* :ref:`envoy.filters.network.redis_proxy <extension_envoy.filters.network.redis_proxy>`
* :ref:`envoy.filters.network.rocketmq_proxy <extension_envoy.filters.network.rocketmq_proxy>` (alpha) (:ref:`contrib builds <install_contrib>` only)
* :ref:`envoy.filters.network.sip_proxy <extension_envoy.filters.network.sip_proxy>` (alpha) (:ref:`contrib builds <install_contrib>` only)
* :ref:`envoy.filters.network.thrift_proxy <extension_envoy.filters.network.thrift_proxy>`
* :ref:`envoy.filters.network.zookeeper_proxy <extension_envoy.filters.network.zookeeper_proxy>` (alpha)
* :ref:`envoy.filters.sip.router <extension_envoy.filters.sip.router>` (alpha) (:ref:`contrib builds <install_contrib>` only)
* :ref:`envoy.filters.thrift.header_to_metadata <extension_envoy.filters.thrift.header_to_metadata>` (alpha)
* :ref:`envoy.filters.thrift.payload_to_metadata <extension_envoy.filters.thrift.payload_to_metadata>` (alpha)
* :ref:`envoy.filters.thrift.rate_limit <extension_envoy.filters.thrift.rate_limit>` (alpha)
* :ref:`envoy.filters.thrift.router <extension_envoy.filters.thrift.router>`
* :ref:`envoy.generic_proxy.codecs.dubbo <extension_envoy.generic_proxy.codecs.dubbo>` (alpha)
* :ref:`envoy.generic_proxy.codecs.http1 <extension_envoy.generic_proxy.codecs.http1>` (alpha)
* :ref:`envoy.health_checkers.redis <extension_envoy.health_checkers.redis>`
* :ref:`envoy.health_checkers.thrift <extension_envoy.health_checkers.thrift>` (alpha)
* :ref:`envoy.matching.input_matchers.hyperscan <extension_envoy.matching.input_matchers.hyperscan>` (alpha) (:ref:`contrib builds <install_contrib>` only)
* :ref:`envoy.network.connection_balance.dlb <extension_envoy.network.connection_balance.dlb>` (alpha) (:ref:`contrib builds <install_contrib>` only)
* :ref:`envoy.quic.connection_debug_visitor.basic <extension_envoy.quic.connection_debug_visitor.basic>` (alpha)
* :ref:`envoy.regex_engines.hyperscan <extension_envoy.regex_engines.hyperscan>` (alpha) (:ref:`contrib builds <install_contrib>` only)
* :ref:`envoy.router.cluster_specifier_plugin.golang <extension_envoy.router.cluster_specifier_plugin.golang>` (alpha) (:ref:`contrib builds <install_contrib>` only)
* :ref:`envoy.tls.cert_validator.spiffe <extension_envoy.tls.cert_validator.spiffe>` (alpha)
* :ref:`envoy.transport_sockets.raw_buffer <extension_envoy.transport_sockets.raw_buffer>`
* :ref:`envoy.transport_sockets.tap <extension_envoy.transport_sockets.tap>` (alpha)